Fix text alignment issue

--- a/style.css
+++ b/style.css
@@ -194,6 +194,6 @@ span {
     }
 
     .product {
-        width: 50%;
+        width: 60%;
     }
 }
